test/message/fail/regress-533055861.out
*A.mjs:1: SyntaxError: The requested module './B.mjs' does not provide an export named 'x'
import { x } from './B.mjs';
         ^
SyntaxError: The requested module './B.mjs' does not provide an export named 'x'
